<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeDetailViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/shoe_detail_marginTop"
        android:orientation="vertical"
        tools:context=".screens.ShoeDetailFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shoedetailtitle"
            android:layout_marginTop="@dimen/shoe_detail_marginTop"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:text="@string/shoe_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_shoe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={shoe.name}"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:text="@string/company" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={shoe.company}"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:text="@string/size" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_shoe_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={com.udacity.shoestore.utils.Convert.doubleToString(shoe.size)}"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_shoe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:text="@string/description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_shoe_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={shoe.description}"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size"
                        android:onClick="@{()-> shoeDetailViewModel.onSaveShoe()}"
                        tools:ignore="ButtonStyle,UnusedAttribute" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/white_border_shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/btn_text_size"
                        android:onClick="@{()-> shoeDetailViewModel.onCancelShoe()}"
                        tools:ignore="ButtonStyle,UnusedAttribute" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>